@@ -1,3 +1,6 @@
+7 June 2018: Wouter
+	- Fix that update_connection_zones does not use item after free.
+
 23 May 2018: Wouter
 	- string_list, sprint with null termination and correct buffer check.
 
